# slack-todos

./: .env.template  .gitignore  .gitpod.yml  Cargo.toml  README.md
migrations/: 20240410172729_init-db.up.sql  20240413121326_create-actions-table.up.sql
src/: action.rs  main.rs  todo.rs
src/blocks/: created.block.json  list.block.json  list.json  todo.block.json
src/modals/: create.modal.json
src/router/: mod.rs
src/slack/: block.rs  escape.rs  mod.rs  modal.rs  payloads.rs
