[package]
name = "slack-todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
